--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "motion": "^10.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "react-tabs": "^6.0.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
