Created toast icons for login failures

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "motion": "^10.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
