--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "cypress:e2e": "cypress run --e2e --browser chrome",
-    "cypress:component": "cypress run --component --browser chrome"
+    "cypress:component": "cypress run --component --browser chrome",
+    "cypress:ui":"npm run dev && npx cypress open"
   },
   "dependencies": {
     "axios": "^1.6.7",
