--- a/package.json
+++ b/package.json
@@ -5,23 +5,31 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start:test": "vite --mode test",
+    "start:dev": "vite",
+    "start:prod": "dotenv -e .env -- npm run dev",
     "build": "vite build",
     "test": "npx jest",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "cypress:e2e": "cypress run --e2e --browser chrome",
+    "cypress:e2e": "cypress open --e2e --browser chrome",
+    "cypress:e2e:ci": "cypress run --e2e --browser chrome",
     "cypress:component": "cypress run --component --browser chrome",
-    "cypress:ui":"npm run dev && npx cypress open"
+    "cypress:ui": "npm run dev && npx cypress open"
   },
   "dependencies": {
+    "@cypress/code-coverage": "^3.12.29",
     "axios": "^1.6.7",
-    "cypress": "^13.6.4",
+    "babel-plugin-istanbul": "^6.1.1",
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.1",
     "framer": "^2.4.1",
     "motion": "^10.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "vite-plugin-istanbul": "^6.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
@@ -31,11 +39,13 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "babel-jest": "^29.7.0",
+    "cypress": "^13.7.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "jest": "^29.7.0",
+    "nyc": "^15.1.0",
     "postcss": "^8.4.35",
     "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.4.1",
