--- a/.github/workflows/Development.yml
+++ b/.github/workflows/Development.yml
@@ -27,8 +27,14 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CYPRESS_BASE_URL: ${{ secrets.CYPRESS_BASE_URL }}
-      CYPRESS_REGULAR_EMAIL: ${{ secrets.REGULAR_EMAIL }}
+      CYPRESS_API_URL: ${{ secrets.CYPRESS_API_URL }}
+      CYPRESS_REGULAR_EMAIL: ${{ secrets.CYPRESS_REGULAR_EMAIL }}
       CYPRESS_REGULAR_PASSWORD: ${{ secrets.CYPRESS_REGULAR_PASSWORD }}
+      CYPRESS_ADMIN_EMAIL: ${{ secrets.CYPRESS_ADMIN_EMAIL }}
+      CYPRESS_ADMIN_PASSWORD: ${{ secrets.CYPRESS_ADMIN_PASSWORD }}
+      NODE_ENV: ${{ secrets.NODE_ENV }}
+      VITE_API_ENDPOINT: ${{ secrets.VITE_API_ENDPOINT }}
+      
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -45,7 +51,7 @@ jobs:
         run: npm install
 
       - name: Test (E2E)
-        run: npm run cypress:E2E
+        run: npm run test:e2e:ci
 
       - name: Test (Components)
         run: npm run cypress:component
