--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
     "test": "npx jest",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "cypress:e2e": "cypress open --e2e --browser chrome",
+    "cypress:e2e": "cypress open --e2e --browser chrome -- npm run dev",
     "cypress:e2e:ci": "cypress run --e2e --browser chrome",
     "cypress:component": "cypress run --component --browser chrome",
-    "cypress:ui": "npm run dev && npx cypress open"
+    "test:e2e": "concurrently \"wait-on http://localhost:5173 && npm run cypress:e2e\" \"npm run start:test\"",
+    "test:e2e:ci": "concurrently \"wait-on http://localhost:5173 && npm run cypress:e2e:ci\" \"npm run start:test\""
   },
   "dependencies": {
-    "@cypress/code-coverage": "^3.12.29",
     "axios": "^1.6.7",
     "babel-plugin-istanbul": "^6.1.1",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.1",
     "framer": "^2.4.1",
+    "istanbul-lib-coverage": "^3.2.2",
     "motion": "^10.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,11 +35,13 @@
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
+    "@cypress/code-coverage": "^3.12.29",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "babel-jest": "^29.7.0",
+    "concurrently": "^8.2.2",
     "cypress": "^13.7.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
@@ -49,6 +52,7 @@
     "postcss": "^8.4.35",
     "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "wait-on": "^7.2.0"
   }
 }
