--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.1",
     "framer": "^2.4.1",
+    "framer-motion": "^11.0.20",
     "istanbul-lib-coverage": "^3.2.2",
     "motion": "^10.17.0",
     "react": "^18.2.0",
@@ -43,8 +44,11 @@
     "babel-jest": "^29.7.0",
     "concurrently": "^8.2.2",
     "cypress": "^13.7.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "istanbul": "^0.4.5",
