fixed majorty of the cypress test after Lint implementation, but admin update report still broken

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,16 +2,11 @@
     "env": {
         "browser": true,
         "es2021": true,
-        "cypress/node": true
+        "node": true,
     },
     "extends": 
         "airbnb",
-        "plugin:cypress/recommended": "error",
-    
-    "plugins": [
-        "cypress"
-    ],
-    
+        
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
