--- a/.github/workflows/Development.yml
+++ b/.github/workflows/Development.yml
@@ -5,7 +5,7 @@ on:
     branches: dev
 
 jobs:
-  start-server-and-test:
+  cypress:
     runs-on: ubuntu-latest
     env:
       CYPRESS_BASE_URL: http://localhost:3000 # Assuming your server runs on port 3000
@@ -34,21 +34,6 @@ jobs:
 
       - name: Start Server
         run: npm run start:test & # Start your server in the background
-
-      - name: Wait for Server to Start
-        run: |
-          timeout=120
-          while [[ "$timeout" -gt 0 ]]; do
-            if curl -s -o /dev/null $CYPRESS_BASE_URL; then
-              break
-            fi
-            sleep 5
-            ((timeout-=5))
-          done
-          if [[ "$timeout" -eq 0 ]]; then
-            echo "Server did not start within the specified timeout"
-            exit 1
-          fi
 
       - name: Test (Components)
         run: npm run cypress:component
