--- a/.github/workflows/Development.yml
+++ b/.github/workflows/Development.yml
@@ -8,7 +8,7 @@ jobs:
   cypress:
     runs-on: ubuntu-latest
     env:
-      CYPRESS_BASE_URL: ${{ secrets.CYPRESS_BASE_URL }} # Assuming your server runs on port 3000
+      CYPRESS_BASE_URL: ${{ secrets.CYPRESS_BASE_URL }}
       CYPRESS_API_URL: ${{ secrets.CYPRESS_API_URL }}
       CYPRESS_REGULAR_EMAIL: ${{ secrets.CYPRESS_REGULAR_EMAIL }}
       CYPRESS_REGULAR_PASSWORD: ${{ secrets.CYPRESS_REGULAR_PASSWORD }}
@@ -26,6 +26,8 @@ jobs:
         with:
           node-version: 21.6.0
 
+      - name: Echo Secret
+        run: echo "BASE URL ${{ secrets.CYPRESS_BASE_URL }}"
       - name: 'install npm@latest'
         run: npm i -g npm@latest
 
@@ -37,6 +39,8 @@ jobs:
 
       - name: Test (Components)
         run: npm run cypress:component
+
+    
 
       - name: Test (E2E)
         run: npm run cypress:e2e:ci
