ci: check secrets

--- a/.github/workflows/Development.yml
+++ b/.github/workflows/Development.yml
@@ -5,35 +5,34 @@ on:
     branches: ci-testing
 
 jobs:
-  cypress:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  # cypress:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20.10.0
+  #     - name: Setup Node
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 20.10.0
 
-      - name: 'install npm@latest'
-        run: npm i -g npm@latest
+  #     - name: 'install npm@latest'
+  #       run: npm i -g npm@latest
 
-      - name: Install Dependencies
-        run: npm install
+  #     - name: Install Dependencies
+  #       run: npm install
 
   test:
-    needs: cypress
     runs-on: ubuntu-latest
-    # env:
-    #   CYPRESS_BASE_URL: ${{ secrets.CYPRESS_BASE_URL }}
-    #   CYPRESS_API_URL: ${{ secrets.CYPRESS_API_URL }}
-    #   CYPRESS_REGULAR_EMAIL: ${{ secrets.CYPRESS_REGULAR_EMAIL }}
-    #   CYPRESS_REGULAR_PASSWORD: ${{ secrets.CYPRESS_REGULAR_PASSWORD }}
-    #   CYPRESS_ADMIN_EMAIL: ${{ secrets.CYPRESS_ADMIN_EMAIL }}
-    #   CYPRESS_ADMIN_PASSWORD: ${{ secrets.CYPRESS_ADMIN_PASSWORD }}
-    #   NODE_ENV: ${{ secrets.NODE_ENV }}
-    #   VITE_API_ENDPOINT: ${{ secrets.VITE_API_ENDPOINT }}
+    env:
+      CYPRESS_BASE_URL: ${{ secrets.CYPRESS_BASE_URL }}
+      CYPRESS_API_URL: ${{ secrets.CYPRESS_API_URL }}
+      CYPRESS_REGULAR_EMAIL: ${{ secrets.CYPRESS_REGULAR_EMAIL }}
+      CYPRESS_REGULAR_PASSWORD: ${{ secrets.CYPRESS_REGULAR_PASSWORD }}
+      CYPRESS_ADMIN_EMAIL: ${{ secrets.CYPRESS_ADMIN_EMAIL }}
+      CYPRESS_ADMIN_PASSWORD: ${{ secrets.CYPRESS_ADMIN_PASSWORD }}
+      NODE_ENV: ${{ secrets.NODE_ENV }}
+      VITE_API_ENDPOINT: ${{ secrets.VITE_API_ENDPOINT }}
 
     steps:
       - name: Checkout
@@ -48,7 +47,21 @@ jobs:
         run: npm i -g npm@latest
 
       - name: Install Dependencies
-        run: npm install
+        run: npm
+
+      - name: Check if secrets are empty
+        run: |
+          if [ -z "${{ secrets.CYPRESS_BASE_URL }}" ]; then
+            echo "BASE URL does not exist"
+          else
+            echo "BASE URL exists"
+          fi
+
+          if [ -z "${{ secrets.CYPRESS_API_URL }}" ]; then
+            echo "API URL does not exist"
+          else
+            echo "API URL exists"
+          fi
 
       - name: Test (E2E)
         uses: cypress-io/github-action@v6
