--- a/.github/workflows/Development.yml
+++ b/.github/workflows/Development.yml
@@ -5,28 +5,11 @@ on:
     branches: ci-testing
 
 jobs:
-  # cypress:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-
-  #     - name: Setup Node
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 20.10.0
-
-  #     - name: 'install npm@latest'
-  #       run: npm i -g npm@latest
-
-  #     - name: Install Dependencies
-  #       run: npm install
-
   test:
     runs-on: ubuntu-latest
     env:
       NODE_ENV: ${{ secrets.NODE_ENV }}
-      VITE_API_ENDPOINT: ${{ secrets.VITE_API_ENDPOINT }}
+      VITE_API_ENDPOINT: https://repit-server.onrender.com/api
 
     steps:
       - name: Checkout
