--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^11.0.20",
     "istanbul-lib-coverage": "^3.2.2",
     "motion": "^10.17.0",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
