--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "format": "prettier \"{src,test}/**/*.ts\" --write",
+    "format": "prettier \"{src,test}/**/*.jsx\" --write",
     "dev": "vite",
     "start:test": "vite --mode test",
     "start:dev": "vite",
