--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,19 +2,16 @@
     "env": {
         "browser": true,
         "es2021": true,
-        "node": true,
-        "cypess/globals": true
+        "node": true
+        // "cypress": true // Enable Cypress environment
     },
-    "extends": 
-    [
+    "extends": [
         "eslint:recommended",
         "plugin:react/recommended"
     ],
-        
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "rules": {
-    }
+    "rules": {}
 }
